tests/spec/emit/snapshots/struct_variant_construction.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Message {
    Move { x: int, y: int },
  }
  
  fn make_move() -> Message {
    Message.Move { x: 10, y: 20 }
  }
---
package main

func MakeMessageMove(arg0 int, arg1 int) Message {
	return Message{Tag: MessageMove, X: arg0, Y: arg1}
}

type MessageTag uint8

const (
	MessageMove MessageTag = iota
)

type Message struct {
	Tag MessageTag
	X   int
	Y   int
}

func makeMove() Message {
	return Message{
		Tag: MessageMove,
		X:   10,
		Y:   20,
	}
}
