tests/spec/emit/snapshots/struct_variant_pattern_partial.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum Shape {
    Rectangle { x: int, y: int, width: int, height: int },
  }
  
  fn area(s: Shape) -> int {
    match s {
      Rectangle { width, height, .. } => width * height,
    }
  }
---
package main

func MakeShapeRectangle(arg0 int, arg1 int, arg2 int, arg3 int) Shape {
	return Shape{Tag: ShapeRectangle, X: arg0, Y: arg1, Width: arg2, Height: arg3}
}

type ShapeTag uint8

const (
	ShapeRectangle ShapeTag = iota
)

type Shape struct {
	Tag    ShapeTag
	X      int
	Y      int
	Width  int
	Height int
}

func area(s Shape) int {
	return s.Width * s.Height
}
