tests/spec/emit/snapshots/struct_with_different_types.snap
---
source: tests/spec/emit/types.rs
description: "input: \nstruct User { name: string, age: int, active: bool }\n"
---
package main

type User struct {
	name   string
	age    int
	active bool
}
