tests/spec/emit/snapshots/struct_with_json_name_override.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  struct User {
    #[json("userName")]
    name: string,
  }
---
package main

type User struct {
	Name string `json:"userName"`
}
