tests/spec/emit/snapshots/struct_with_json_omitempty_and_omitzero.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  struct User {
    #[json(omitempty, omitzero)]
    name: string,
  }
---
package main

type User struct {
	Name string `json:"name,omitempty,omitzero"`
}
