tests/spec/emit/snapshots/struct_with_json_skip.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  struct User {
    #[json(skip)]
    password: string,
  }
---
package main

type User struct {
	Password string `json:"-"`
}
