tests/spec/emit/snapshots/struct_with_json_snake_case.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[json(snake_case)]\nstruct User {\n  first_name: string,\n  last_name: string,\n}\n"
---
package main

type User struct {
	FirstName string `json:"first_name"`
	LastName  string `json:"last_name"`
}
