tests/spec/emit/snapshots/struct_with_json_tag.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[json]
  struct User {
    name: string,
    age: int,
  }
---
package main

type User struct {
	Name string `json:"name"`
	Age  int    `json:"age"`
}
