tests/spec/emit/snapshots/struct_with_multiple_raw_tags.snap
---
source: tests/spec/emit/types.rs
description: "input: \n#[tag(\"validate\")]\n#[tag(\"custom\")]\nstruct User {\n  #[tag(`validate:\"required\"`)]\n  #[tag(`custom:\"foo\"`)]\n  name: string,\n}\n"
---
package main

type User struct {
	Name string `custom:"foo" validate:"required"`
}
